fix(color-picker): Optimize background overflow for color control bar (#3116)

--- a/packages/web-vue/components/color-picker/style/index.less
+++ b/packages/web-vue/components/color-picker/style/index.less
@@ -216,6 +216,7 @@
       transparent 0
     );
     background-size: 8px 8px;
+    border-radius: @color-control-bar-border-radius;
   }
 
   .@{color-picker-prefix-cls}-control-bar {
@@ -224,7 +225,7 @@
     width: @color-control-bar-width;
     height: @color-control-bar-height;
     border: 1px solid @color-panel-border-color;
-    border-radius: 10px;
+    border-radius: @color-control-bar-border-radius;
     cursor: pointer;
 
     .@{color-picker-prefix-cls}-handler {
